<resources>
    <string name="title_book">도감</string>
    <string name="title_mybook">내도감</string>
    <string name="title_booksearch">검색</string>
    <string name="title_activity_book_main">MainActivity</string>
    <string name="title_home">도감</string>
    <string name="title_dashboard">내도감</string>
    <string name="title_notifications">검색</string>
    <string name="title_hurbsearch">약초찾기</string>
    <string name="title_mushroom">버섯구분</string>



    <string name="title_activity_tmp">tmp</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>