<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_book"
        android:icon="@drawable/ic_book"
        android:title="@string/title_book" />

    <item
        android:id="@+id/navigation_mybook"
        android:icon="@drawable/ic_mybook"
        android:title="@string/title_mybook" />

    <item
        android:id="@+id/navigation_booksearch"
        android:icon="@drawable/ic_search"
        android:title="@string/title_booksearch" />

    <item
        android:id="@+id/navigation_hurbsearch"
        android:icon="@drawable/ic_hurb"
        android:title="@string/title_hurbsearch" />

    <item
        android:id="@+id/navigation_mushroom"
        android:icon="@drawable/ic_mushroom_nav"
        android:title="@string/title_mushroom" />

</menu>