<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_book">

    <fragment
        android:id="@+id/navigation_book"
        android:name="com.beautifourest.forestapp.ui.book.BookFragment"
        android:label="@string/title_book"
        tools:layout="@layout/fragment_book" />

    <fragment
        android:id="@+id/navigation_mybook"
        android:name="com.beautifourest.forestapp.ui.mybook.MybookFragment"
        android:label="@string/title_mybook"
        tools:layout="@layout/fragment_mybook" />

    <fragment
        android:id="@+id/navigation_booksearch"
        android:name="com.beautifourest.forestapp.ui.bookSearch.BookSearchFragment"
        android:label="@string/title_booksearch"
        tools:layout="@layout/fragment_booksearch" />

    <fragment
        android:id="@+id/navigation_hurbsearch"
        android:name="com.beautifourest.forestapp.ui.hurbSearch.HurbSearchFragment"
        android:label="@string/title_hurbsearch"
        tools:layout="@layout/fragment_hurbsearch" />

    <fragment
        android:id="@+id/navigator_mushroom"
        android:name="com.beautifourest.forestapp.ui.mushroom.MushroomFragment"
        android:label="@string/title_mushroom"
        tools:layout="@layout/fragment_mushroom"/>

</navigation>